# matrix_calc

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md
src/: ast.h  helpers.h  lexer.l  llasm.cpp  llasm.h  llasm_arr.cpp  llasm_common.cpp  llasm_func.cpp  llasm_ops.cpp  llasm_var.cpp  main.h  main_0ac.cpp  main_3ac.cpp  parser.cpp  parser.h  parser.y  printast.cpp  printast.h  runtime.c  semantics.cpp  semantics.h  sym.h  types.h  version.h  zeroacasm.cpp  zeroacasm.h
src/ast/: ast.h  printast.cpp
src/codegen_0ac/: arr.cpp  asm.cpp  asm.h  consttab.cpp  consttab.h  func.cpp  main.cpp  main_direct.cpp  main_yy.cpp  ops.cpp  var.cpp
src/codegen_3ac/: arr.cpp  asm.cpp  asm.h  func.cpp  main.cpp  ops.cpp  runtime.c  var.cpp
src/common/: context.h  ext_funcs.h  helpers.h  sym.cpp  sym.h  types.h  version.h
src/libs/: math_algos.h  math_concepts.h  math_conts.h  runtime.c
src/parser_direct/: grammar.cpp  grammar.h  lexer.cpp  lexer.h  lval.h  parsergen.cpp
src/parser_yy/: lexer.l  parser.cpp  parser.h  parser.y
src/vm_0ac/: extfuncs.cpp  helpers.h  main.cpp  math_algos.h  opcodes.h  run.cpp  types.h  vm.cpp  vm.h  vm_extfuncs.cpp  vm_run.cpp
test/: cryst.prog  fibo.prog  matrix.prog  tst_multiret.prog  tst_ranges.prog
